tests/snapshots/integration_response_validation__empty_body_200.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="DELETE /pets/1 empty_body_200" time="0.00">
            <system-out>
[[PROPERTY|correlationId=empty_body_200]]
[[PROPERTY|method=DELETE]]
[[PROPERTY|operationId=deletePet]]
[[PROPERTY|path=/pets/1]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|statusCode=200]]
            </system-out>
            <failure type="InvalidStatusCode" message="failure">
[[PROPERTY|correlationId=empty_body_200]]
[[PROPERTY|method=DELETE]]
[[PROPERTY|operationId=deletePet]]
[[PROPERTY|path=/pets/1]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|statusCode=200]]

Failure message:
Response not found for status code
            </failure>
        </testcase>
    </testsuite>
</testsuites>
