tests/snapshots/integration_response_validation__failed_json_deserialization.snap
---
source: tests/integration_response_validation.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="GET /pets/1 failed_json_deserialization" time="0.00">
            <system-out>
[[PROPERTY|correlationId=failed_json_deserialization]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=showPetById]]
[[PROPERTY|path=/pets/1]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=200]]
            </system-out>
            <failure type="Response.FailedJSONDeserialization" message="failure">
[[PROPERTY|correlationId=failed_json_deserialization]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=showPetById]]
[[PROPERTY|path=/pets/1]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=200]]

Failure message:
Failed to parse response body as JSON
            </failure>
        </testcase>
    </testsuite>
</testsuites>
