tests/snapshots/integration_response_validation__failed_validation_unexpected_property.snap
---
source: tests/integration_response_validation.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="GET /pets/1 failed_validation_unexpected_property" time="0.00">
            <system-out>
[[PROPERTY|correlationId=failed_validation_unexpected_property]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=showPetById]]
[[PROPERTY|path=/pets/1]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=200]]
            </system-out>
            <failure type="Response.FailedValidation.UnexpectedProperty" message="failure">
[[PROPERTY|correlationId=failed_validation_unexpected_property]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=showPetById]]
[[PROPERTY|path=/pets/1]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=200]]

Failure message:
Unexpected property at /extra, value "field"
            </failure>
        </testcase>
    </testsuite>
</testsuites>
