tests/snapshots/integration_response_validation__failed_validation_unsupported_schema_kind.snap
---
source: tests/integration_response_validation.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="GET /any_of_pet_schema failed_validation_unsupported_schema_kind" time="0.00">
            <system-out>
[[PROPERTY|correlationId=failed_validation_unsupported_schema_kind]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=anyOfPetSchema]]
[[PROPERTY|path=/any_of_pet_schema]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=200]]
            </system-out>
            <failure type="Response.FailedValidation.UnsupportedSchemaKind" message="failure">
[[PROPERTY|correlationId=failed_validation_unsupported_schema_kind]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=anyOfPetSchema]]
[[PROPERTY|path=/any_of_pet_schema]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=200]]

Failure message:
Received unsupported schema kind: AnyOf { any_of: [Reference { reference: "#/components/schemas/Pet" }, Item(Schema { schema_data: SchemaData { nullable: false, read_only: false, write_only: false, deprecated: false, external_docs: None, example: None, title: None, description: None, discriminator: None, default: None, extensions: {} }, schema_kind: Type(Object(ObjectType { properties: {"id": Item(Schema { schema_data: SchemaData { nullable: false, read_only: false, write_only: false, deprecated: false, external_docs: None, example: None, title: None, description: None, discriminator: None, default: None, extensions: {} }, schema_kind: Type(Integer(IntegerType { format: Item(Int64), multiple_of: None, exclusive_minimum: false, exclusive_maximum: false, minimum: None, maximum: None, enumeration: [] })) }), "name": Item(Schema { schema_data: SchemaData { nullable: false, read_only: false, write_only: false, deprecated: false, external_docs: None, example: None, title: None, description: None, discriminator: None, default: None, extensions: {} }, schema_kind: Type(String(StringType { format: Empty, pattern: None, enumeration: [], min_length: None, max_length: None })) })}, required: ["id", "name"], additional_properties: None, min_properties: None, max_properties: None })) })] } at /
            </failure>
        </testcase>
    </testsuite>
</testsuites>
