tests/snapshots/integration_response_validation__invalid_status_code.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="GET /pets invalid_status_code" time="0.00">
            <system-out>
[[PROPERTY|correlationId=invalid_status_code]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=listPets]]
[[PROPERTY|path=/pets]]
[[PROPERTY|statusCode=600]]
            </system-out>
            <failure type="InvalidStatusCode" message="failure">
[[PROPERTY|correlationId=invalid_status_code]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=listPets]]
[[PROPERTY|path=/pets]]
[[PROPERTY|statusCode=600]]

Failure message:
Response not found for status code
            </failure>
        </testcase>
    </testsuite>
</testsuites>
