tests/snapshots/integration_response_validation__mismatch_non_empty_body.snap
---
source: tests/integration_response_validation.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="GET /pets/1 mismatch_non_empty_body" time="0.00">
            <system-out>
[[PROPERTY|correlationId=mismatch_non_empty_body]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=showPetById]]
[[PROPERTY|path=/pets/1]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|responseContentType=]]
[[PROPERTY|statusCode=202]]
            </system-out>
            <failure type="Response.MismatchNonEmptyBody" message="failure">
[[PROPERTY|correlationId=mismatch_non_empty_body]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=showPetById]]
[[PROPERTY|path=/pets/1]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|responseContentType=]]
[[PROPERTY|statusCode=202]]

Failure message:
Receieved response body when empty body is expected
            </failure>
        </testcase>
    </testsuite>
</testsuites>
