tests/snapshots/integration_response_validation__missing_schema_definition.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="openapi-validator-proxy" tests="1" failures="1">
        <testcase name="GET /missing_pets_schema missing_schema_definition" time="0.00">
            <system-out>
[[PROPERTY|correlationId=missing_schema_definition]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=missingPetsSchema]]
[[PROPERTY|path=/missing_pets_schema]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=200]]
            </system-out>
            <failure type="MissingSchemaDefinition" message="failure">
[[PROPERTY|correlationId=missing_schema_definition]]
[[PROPERTY|method=GET]]
[[PROPERTY|operationId=missingPetsSchema]]
[[PROPERTY|path=/missing_pets_schema]]
[[PROPERTY|responseContentType=application/json]]
[[PROPERTY|statusCode=200]]

Failure message:
Could not find schema defined inline or as a #/components/schemas/ reference
            </failure>
        </testcase>
    </testsuite>
</testsuites>
